force-app/main/default/objects/Defendant_Firm_Schedule_of_Loss__c/Defendant_Firm_Schedule_of_Loss__c.object-meta.xml
<CustomObject>
    <label>Defendant Firm - Schedule of Loss</label>
    <nameField>
        <displayFormat>DF-SOL-{00000}</displayFormat>
        <label>Defendant Firm - Schedule of Loss Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Defendant Firm - Schedule of Losses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>