force-app/main/default/objects/Defendant_Firm_Schedule_of_Loss__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <formula>Schedule_of_Losses__r.Case__r.CaseNumber</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case</label>
    <type>Text</type>
</CustomField>