force-app/main/default/objects/Defendant_Firm_Schedule_of_Loss__c/fields/Defendant_Firm__c.field-meta.xml
<CustomField>
    <fullName>Defendant_Firm__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Defendant Firm</label>
    <referenceTo>Defendant_Firm__c</referenceTo>
    <relationshipLabel>Defendant Firm - Schedule of Losses</relationshipLabel>
    <relationshipName>Defendant_Firm_Schedule_of_Losses1</relationshipName>
    <type>Lookup</type>
</CustomField>