force-app/main/default/objects/Defendant_Firm_Schedule_of_Loss__c/fields/Defendant_Firm_Name__c.field-meta.xml
<CustomField>
    <fullName>Defendant_Firm_Name__c</fullName>
    <formula>Defendant_Firm__r.Firm__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Defendant Firm Name</label>
    <type>Text</type>
</CustomField>