force-app/main/default/objects/Defendant_Firm_Schedule_of_Loss__c/fields/Schedule_of_Losses__c.field-meta.xml
<CustomField>
    <fullName>Schedule_of_Losses__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Schedule of Losses</label>
    <referenceTo>Schedule_of_Losses__c</referenceTo>
    <relationshipLabel>Defendant Firm - Schedule of Losses</relationshipLabel>
    <relationshipName>Defendant_Firm_Schedule_of_Losses</relationshipName>
    <type>Lookup</type>
</CustomField>