force-app/main/default/objects/Defendant_Firm_Schedule_of_Loss__c/fields/Total_Owing__c.field-meta.xml
<CustomField>
    <fullName>Total_Owing__c</fullName>
    <label>Total Owing</label>
    <summarizedField>Defendant_Firm_Loss_Item_Position__c.Payment_Amount__c</summarizedField>
    <summaryForeignKey>Defendant_Firm_Loss_Item_Position__c.Defendant_Firm_Schedule_of_Loss__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>